--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+	    <!--button class="btn btn-success btn-large">Preorder</button> -->
+	    <a class="coinbase-button" data-code="b341dd798e0bc340d27bce33b360b59f" data-button-style="custom_large" data-button-text="Preorder With Bitcoin" href="https://coinbase.com/checkouts/b341dd798e0bc340d27bce33b360b59f">Preorder With Bitcoin</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
